test/invalid/baseline/stray-slash.txt
Syntax error at line 2:
/ This is not.
^ Unrecognised tokens
